# lyra

./: AutoRun.sh  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  lyra
conf/: conf.json
include/: Common.h  Render.hpp  Shader.h  Simulator.hpp  blockvectors.hpp  camera.h  cloth.hpp  conf.hpp  constraint.hpp  dde.hpp  geometry.hpp  handle.hpp  io.hpp  magic.hpp  mesh.hpp  mot_parser.hpp  physics.hpp  simulation.hpp  sparse.hpp  sparse_solver.hpp  spline.hpp  transformation.hpp  util.hpp  vectors.hpp  winport.hpp
materials/: 11oz-black-denim.json  README  aluminium.json  camel-ponte-roma.json  gray-interlock.json  isotropic.json  ivory-rib-knit.json  navy-sparkle-sweat.json  paper.json  pink-ribbon-brown.json  royal-target.json  tango-red-jet-set.json  white-dots-on-blk.json  white-swim-solid.json
shader/: shader.frag  shader.vert
src/: cloth.cpp  conf.cpp  constraint.cpp  dde.cpp  geometry.cpp  handle.cpp  io.cpp  magic.cpp  main.cpp  mesh.cpp  mot_parser.cpp  physics.cpp  simulation.cpp  sparse_solver.cpp  spline.cpp  transformation.cpp  util.cpp  vectors.cpp
